@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190508"
-#define public MagickPackageReleaseDate "snapshot-20190508"
+#define public MagickPackageVersionAddendum ".020190511"
+#define public MagickPackageReleaseDate "snapshot-20190511"
