@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2019-05-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/miff.c (ImportRLEPixels): Fix heap overflow caused by a
+typo in the code.  Also fix undefined behavior caused by large
+left shifts of an unsigned char.  Fixes SourceForge issue #608
+&quot;heap-buffer-overflow in ImportRLEPixels of coders/miff.c.</li>
+</ul>
+</blockquote>
 <p>2019-05-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
